# CpuGraphicRasterizer

./: .gitignore  3d-cube  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CTestTestfile.cmake  Info.plist  LICENSE  Makefile  README.md  build.ninja  cmake_install.cmake  package-lock.json  package.json  rules.ninja  unit-test
3d-cube.xcodeproj/: project.pbxproj
3d-cube.xcodeproj/project.xcworkspace/xcuserdata/mohammad.fakhreddin.xcuserdatad/: UserInterfaceState.xcuserstate
3d-cube.xcodeproj/xcuserdata/mohammad.fakhreddin.xcuserdatad/xcschemes/: xcschememanagement.plist
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  RUN_TESTS_postBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
android/: .gitignore  cube.jks  gradle.properties
android/app/: .gitignore  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AndroidEnvironment.cpp  AndroidEnvironment.h  main.cpp
android/cpp/: AndroidEnvironment.cpp  AndroidEnvironment.h  main.cpp
android/gradle/wrapper/: gradle-wrapper.properties
assets/city_scene_assets/carKit_v1.3/Models/DAE format/: ambulance.dae  delivery.dae  deliveryFlat.dae  firetruck.dae  hatchbackSports.dae  police.dae  race.dae  raceFuture.dae  sedan.dae  sedanSports.dae  suv.dae  suvLuxury.dae  taxi.dae  tractor.dae  tractorPolice.dae  tractorShovel.dae  truck.dae  truckFlat.dae  van.dae  wheelDark.dae  wheelDefault.dae  wheelRacing.dae  wheelTractorBack.dae  wheelTractorDarkBack.dae  wheelTractorDarkFront.dae  wheelTractorFront.dae  wheelTruck.dae
assets/city_scene_assets/carKit_v1.3/Models/FBX format/: ambulance.fbx  delivery.fbx  deliveryFlat.fbx  firetruck.fbx  hatchbackSports.fbx  police.fbx  race.fbx  raceFuture.fbx  sedan.fbx  suvLuxury.fbx  taxi.fbx  tractor.fbx  tractorPolice.fbx  tractorShovel.fbx  truck.fbx  truckFlat.fbx  van.fbx  wheelDark.fbx  wheelDefault.fbx  wheelRacing.fbx  wheelTractorBack.fbx  wheelTractorDarkBack.fbx  wheelTractorDarkFront.fbx  (+2 more)
ios/ThreeDimentionalCube/ThreeDimentionalCube/: AppDelegate.h  AppDelegate.m  IPhoneHelper-C-Interface.h  IPhoneHelper.h  IPhoneHelper.mm  IPhoneHelperAbstraction.cpp  IPhoneHelperAbstraction.h  SceneDelegate.h  ViewController.h  ViewController.mm  main.m  main.mm
ios/ThreeDimentionalCube/ThreeDimentionalCube.xcodeproj/: project.pbxproj
ios/ThreeDimentionalCube/ThreeDimentionalCube.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/ThreeDimentionalCube/ThreeDimentionalCube/Base.lproj/: Main.storyboard
ios/ThreeDimentionalCube/assets.xcassets/broken_cube_texture.imageset/: Contents.json
ios/ThreeDimentionalCube/assets.xcassets/bunny.dataset/: Contents.json
ios/ThreeDimentionalCube/assets.xcassets/dice_texture.imageset/: Contents.json
ios/ThreeDimentionalCube/assets.xcassets/monkey.dataset/: Contents.json
ios/ThreeDimentionalCube/assets.xcassets/plant.dataset/: Contents.json
ios/ThreeDimentionalCube/assets.xcassets/robot.dataset/: Contents.json
linux/: main.cpp
mac/: main.cpp
src/: Constants.h  OpenGlHeaders.h  main.cpp
src/3d/models/: ColoredCube.h  DiceCube.h  ShapeGenerator.h
src/3d/shape/: Shape3d.cpp  Shape3d.h
src/3d/surface/: LineMemoryPool.h  Surface.cpp  Surface.h  TriangleMemoryPool.h
src/3d_models/: ColoredCube.h  Dice.h  DiceCube.h  ShapeGenerator.h  Sky.h  Wood.h
src/3d_shape/: Shape3d.cpp  Shape3d.h
src/3d_shape/edge/base_edge/: BaseEdge.cpp  BaseEdge.h
src/3d_shape/edge/color_edge/: ColorEdge.cpp  ColorEdge.h
src/3d_shape/edge/simple_edge/: SimpleEdge.cpp  SimpleEdge.h
src/3d_shape/edge/texture_edge/: TextureEdge.cpp  TextureEdge.h
src/3d_shape/surface/base_surface/: BaseSurface.cpp  BaseSurface.h
src/3d_shape/surface/color_surface/: ColorSurface.cpp  ColorSurface.h
src/3d_shape/surface/simple_edge/: SimpleSurface.cpp  SimpleSurface.h
src/3d_shape/surface/texture_surface/: TextureSurface.cpp  TextureSurface.h
src/application/: Application.cpp  Application.h
src/camera/: Camera.cpp  Camera.h
src/data_access_point/: DataAccessPoint.cpp  DataAccessPoint.h
src/data_types/: FaObject.h  MatrixTemplate.h  VectorTemplate.h
src/date_types/: MatrixTemplate.h  VectorTemplate.h
src/event_handler/: EventHandler.cpp  EventHandler.h
src/fa_texture/: FaTexture.cpp  FaTexture.h  stb_image_headers.h
src/file_system/: FileSystem.h
src/libs/glad/: glad.c  glad.h
src/libs/mini_ball/: Miniball.h
src/open_gl/: OpenGl.cpp  OpenGl.h
src/pipeline/: Pipeline.cpp  Pipeline.h
src/scenes/base_scene/: BaseScene.cpp  BaseScene.h
src/scenes/bunny_scene/: BunnyScene.cpp  BunnyScene.h
src/scenes/colored_cube_scene/: ColoredCubeScene.cpp  ColoredCubeScene.h
src/scenes/light_per_pixel_scene/: LightPerPixelScene.cpp  LightPerPixelScene.h
src/scenes/monkey_scene/: MonkeyScene.cpp  MonkeyScene.h
src/scenes/plant_scene/: PlantScene.cpp  PlantScene.h
src/scenes/robot_scene/: RobotScene.cpp  RobotScene.h
src/scenes/spehre_scene/: SphereScene.cpp  SphereScene.h
src/scenes/textured_cube_scene/: TexturedCubeScene.cpp  TexturedCubeScene.h
src/shaders/ambient_light/: AmbientLight.cpp  AmbientLight.h
src/shaders/diffuse_light/: DiffuseLight.cpp  DiffuseLight.h
src/shaders/directional_light/: DirectionalLight.cpp  DirectionalLight.h
src/shaders/light/: Light.cpp  Light.h
src/shaders/point_light/: PointLight.cpp  PointLight.h
src/surface/: Surface.cpp  Surface.h
src/text/char_glyph/: CharGlyph.cpp  CharGlyph.h
src/text/font/: Font.cpp  Font.h  FontMemoryPool.h
src/text/freetype/: FreeType.cpp  FreeType.h
src/text/resources/: FaCharacterSource.h  LanguageCharacterSource.h
src/texture/: Texture.cpp  Texture.h
src/texture/ColorTexture/: ColorTexture.cpp  ColorTexture.h
src/texture/ImageTexture/: ImageTexture.cpp  ImageTexture.h
src/utils/log/: Logger.h
src/utils/math/: Math.h
src/utils/operators/: Operators.h
src/utils/path/: Path.cpp  Path.h
src/utils/screen/: ScreenSize.cpp  ScreenSize.h
src/utils/thread_pool/: ThreadPool.cpp  ThreadPool.h
tests/: main.cpp
windows/: main.cpp
(+37 files in other folders)
